--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: sans-serif;
+  padding: 2em;
   max-width: 700px;
   margin: auto;
-  padding: 2em;
+  background: #fafafa;
 }
 
 h1, h2 {
@@ -16,10 +17,11 @@ label {
 
 select {
   margin-left: 1em;
+  font-size: 1em;
 }
 
 button {
-  margin-top: 1em;
-  padding: 0.5em 1.5em;
+  padding: 0.5em 1.2em;
   font-size: 1em;
+  margin-top: 1em;
 }
