--- a/style.css
+++ b/style.css
@@ -1,27 +1,28 @@
 body {
   font-family: sans-serif;
   padding: 2em;
-  max-width: 700px;
+  max-width: 1000px;
   margin: auto;
-  background: #fafafa;
 }
 
-h1, h2 {
-  text-align: center;
+#video-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 1em;
+  margin-bottom: 2em;
 }
 
-label {
-  display: block;
-  margin: 1em 0;
+.video-block {
+  flex: 1;
 }
 
 select {
-  margin-left: 1em;
-  font-size: 1em;
+  margin-left: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 button {
-  padding: 0.5em 1.2em;
+  padding: 0.6em 1.2em;
   font-size: 1em;
   margin-top: 1em;
 }
