--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ body {
   margin-bottom: 2em;
   border-top: 1px solid #ccc;
   padding-top: 1em;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .question {
   margin: 1em 0;
