--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ body {
   height: auto;
 }
 .video-rating-block {
-  margin-bottom: 2em;
+  margin-bottom: 3em;
   border-top: 1px solid #ccc;
   padding-top: 1em;
-  max-width: 640px;
+/*   max-width: 640px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
 }
 .question {
   margin: 1em 0;
