--- a/style.css
+++ b/style.css
@@ -14,15 +14,15 @@ body {
   display: none;
 }
 
-.video-row {
+.video-rating-pair {
   display: flex;
-  gap: 1em;
-  justify-content: space-between;
+  gap: 1.5em;
   margin-bottom: 2em;
+  align-items: flex-start;
 }
 
 .video-rating-block {
-  margin-bottom: 2em;
+  flex: 1;
   border-top: 1px solid #ccc;
   padding-top: 1em;
 }
