--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body {
 
 .video-rating-pair {
   display: flex;
-  flex-direction: row;         /* 横向排列 */
+  flex-direction: row;
   align-items: flex-start;
-  gap: 2em;                    /* 间距 */
+  gap: 2em;
   margin-bottom: 2em;
 }
 
@@ -29,9 +29,9 @@ video {
 
 .video-rating-block {
   flex: 1;
-  padding-top: 0;
   margin: 0;
-  border-top: none;
+  padding: 0;
+  border: none;
 }
 
 .question {
