--- a/style.css
+++ b/style.css
@@ -64,14 +64,14 @@ video {
   margin-right: 20px;
   font-size: 14px;
   line-height: 1.5;
-  border-right: 2px solid #ccc;
+  /* border-right: 2px solid #ccc; */
   padding-right: 15px;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-bottom: 15px;
+  margin-bottom: 15px auto;
 }
 th, td {
   border: 1px solid #aaa;
