--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ video {
 
 
 .rating-criteria {
-  width: 840px;
+  width: 840px auto;
   margin-right: 20px;
   font-size: 14px;
   line-height: 1.5;
@@ -60,7 +60,7 @@ video {
 }
 
 .rating-criteria-video {
-  width: 420px;
+  width: 420px auto;
   margin-right: 20px;
   font-size: 14px;
   line-height: 1.5;
@@ -76,7 +76,7 @@ table {
 th, td {
   border: 1px solid #aaa;
   padding: 6px 8px;
-  text-align: left;
+  text-align: middle;
 }
 th {
   background-color: #f0f0f0;
