--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ video {
 
 .rating-criteria-video {
   width: 600px;              
-  margin: 0 auto;            
+  margin: 0;            
   text-align: left;          
   line-height: 1.8;          
   font-size: 16px;           
