--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ video {
 
 .rating-criteria-video {
   display: block;
-  width: 600px;
+  width: 100%;
   margin: 0;                /* 确保没有 auto */
   text-align: left;
   line-height: 1.8;
